--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -2,3 +2,7 @@
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 @import "./pd-gradients";
 @import "./pd-opacity";
+
+a {
+  word-wrap: break-word;
+}
